--- a/css/style.css
+++ b/css/style.css
@@ -2,3 +2,33 @@
 * Created on: Sep 2020
 * This file contains the CSS for index.html
 */
+
+.mdl-ripple {
+  background: #00000064;
+  opacity: 0.001;
+}
+
+.mdl-layout__header-row {
+  justify-content: center;
+  padding: 0;
+}
+
+.mdl-layout__content {
+  padding-left: 15pt;
+  padding-right: 15pt;
+  padding-top: 15pt;
+}
+
+.mdl-textfield__error {
+  color: rgb(180, 238, 144);
+}
+
+.page-content {
+  color: rgb(255, 255, 255);
+  font-family: Helvetica, Arial, sans-serif;
+  font-size: 1.25rem;
+}
+
+body {
+  background-color: rgb(237, 100, 139);
+}
